[frontend] dark mode colors in home page fixed

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -7,10 +7,6 @@ html {
   scroll-behavior: smooth;
 }
 
-:root {
-  color-scheme: light dark;
-}
-
 /* Hide buttons in number inputs */
 
 /* Chrome, Safari, Edge, Opera */
